# wuqut

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  wuqut.py  wuqut.service  wuqut.timer
src/wuqut/: cli.py  prayer.py  print.py  printer.py  scrape.py  scraper.py
