[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wuqut"
version = "0.2.0"
description = "Prayer times in Morocco from the official source"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
authors = [
    { name = "Hassan El anabi" }
]

dependencies = [
    "beautifulsoup4",
    "requests",
    "platformdirs"
]

[project.scripts]
wuqut = "wuqut.printer:main"
wuqut-dl = "wuqut.scraper:main"

[project.urls]
Homepage = "https://github.com/helanabi/wuqut"
